--- a/ccaa_dir/aria2.conf
+++ b/ccaa_dir/aria2.conf
@@ -333,7 +333,7 @@ rpc-listen-port=6800
 rpc-secret=
 
 # RPC 最大请求大小
-rpc-max-request-size=10M
+#rpc-max-request-size=10M
 
 # RPC 服务 SSL/TLS 加密, 默认：false
 # 启用加密后必须使用 https 或者 wss 协议连接
